--- a/dedicated.html
+++ b/dedicated.html
@@ -238,7 +238,7 @@
               </li>
 
               <li class="navbar__item">
-                <button class="dropdown__button" href="#">
+                <button class="dropdown__button">
                   Cloud<span class="menu-arrow"></span>
                 </button>
                 <ul class="dropdown__menu">
@@ -278,7 +278,7 @@
               </li>
 
               <li class="navbar__item">
-                <button class="dropdown__button" href="#">
+                <button class="dropdown__button">
                   Services<span class="menu-arrow"></span>
                 </button>
                 <ul class="dropdown__menu">
@@ -318,7 +318,7 @@
               </li>
 
               <li class="navbar__item">
-                <button class="dropdown__button" href="#">
+                <button class="dropdown__button">
                   Solutions<span class="menu-arrow"></span>
                 </button>
                 <ul class="dropdown__menu">
@@ -358,7 +358,7 @@
               </li>
 
               <li class="navbar__item">
-                <button class="dropdown__button" href="#">
+                <button class="dropdown__button">
                   Company<span class="menu-arrow"></span>
                 </button>
                 <ul class="dropdown__menu">
@@ -398,7 +398,7 @@
               </li>
 
               <li class="navbar__item">
-                <button class="dropdown__button" href="#">
+                <button class="dropdown__button">
                   Recources<span class="menu-arrow"></span>
                 </button>
                 <ul class="dropdown__menu">
@@ -436,37 +436,37 @@
                   </li>
                 </ul>
               </li>
-
-              <div class="mobile-menu__buttons">
-                <button class="button button--transparent button--sm">
-                  LOGIN
-                </button>
-
-                <div class="navbar__item navbar__item--width">
-                  <a class="dropdown__button button--lang">
-                    <svg class="planet-icon" width="40" height="40">
-                      <use href="./images/sprite.svg#planet-icon"></use>
-                    </svg>
-                    English <span class="menu-arrow"></span>
-                  </a>
-                  <ul
-                    class="dropdown__menu dropdown__menu--lang dropdown__menu--white"
-                  >
-                    <li>
-                      <a class="dropdown__link dropdown__link--black" href="#"
-                        >UA</a
-                      >
-                    </li>
-                    <li>
-                      <a class="dropdown__link dropdown__link--black" href="#"
-                        >Русский</a
-                      >
-                    </li>
-                    <li></li>
-                  </ul>
-                </div>
-              </div>
             </ul>
+
+            <div class="mobile-menu__buttons">
+              <button class="button button--transparent button--sm">
+                LOGIN
+              </button>
+
+              <div class="navbar__item navbar__item--width">
+                <a class="dropdown__button button--lang">
+                  <svg class="planet-icon" width="40" height="40">
+                    <use href="./images/sprite.svg#planet-icon"></use>
+                  </svg>
+                  English <span class="menu-arrow"></span>
+                </a>
+                <ul
+                  class="dropdown__menu dropdown__menu--lang dropdown__menu--white"
+                >
+                  <li>
+                    <a class="dropdown__link dropdown__link--black" href="#"
+                      >UA</a
+                    >
+                  </li>
+                  <li>
+                    <a class="dropdown__link dropdown__link--black" href="#"
+                      >Русский</a
+                    >
+                  </li>
+                  <li></li>
+                </ul>
+              </div>
+            </div>
           </div>
         </div>
       </div>
@@ -523,7 +523,7 @@
 
             <div class="hero__image">
               <img
-                width="222px"
+                width="222"
                 class="hero-dedicated__svg"
                 src="./images/balancing-blue.svg"
                 alt="Server illustration"
@@ -557,39 +557,37 @@
               <ul class="price-billing__buttons price-billing__buttons--gap">
                 <li class="price-billing__item">
                   <button
-                    class="price-billing__button price-billing__button--blue"
+                    class="section-subtitle section-subtitle--blue price-billing__button price-billing__button--blue"
                   >
-                    <h4 class="section-subtitle section-subtitle--blue">
-                      1 MONTH
-                    </h4>
-                    <p>Default</p>
+                    1 MONTH
+                    <span class="price-billing__label">Default</span>
                   </button>
                 </li>
 
                 <li class="price-billing__item">
-                  <button class="price-billing__button">
-                    <h4 class="section-subtitle section-subtitle--blue">
-                      1 MONTH
-                    </h4>
-                    <p>Default</p>
+                  <button
+                    class="section-subtitle section-subtitle--blue price-billing__button"
+                  >
+                    1 MONTH
+                    <span class="price-billing__label">Default</span>
                   </button>
                 </li>
 
                 <li class="price-billing__item">
-                  <button class="price-billing__button">
-                    <h4 class="section-subtitle section-subtitle--blue">
-                      1 MONTH
-                    </h4>
-                    <p>Default</p>
+                  <button
+                    class="section-subtitle section-subtitle--blue price-billing__button"
+                  >
+                    1 MONTH
+                    <span class="price-billing__label">Default</span>
                   </button>
                 </li>
 
                 <li class="price-billing__item">
-                  <button class="price-billing__button">
-                    <h4 class="section-subtitle section-subtitle--blue">
-                      1 MONTH
-                    </h4>
-                    <p>Default</p>
+                  <button
+                    class="section-subtitle section-subtitle--blue price-billing__button"
+                  >
+                    1 MONTH
+                    <span class="price-billing__label">Default</span>
                   </button>
                 </li>
               </ul>
@@ -954,7 +952,7 @@
           <li class="price-dedicated__card">
             <img
               class="price-dedicated__gif"
-              width="50px"
+              width="50"
               src="./images/fire.gif"
               alt="Hotprice gif animation"
             />
@@ -1195,7 +1193,7 @@
           <li class="services-cards__item services-cards__item--blue">
             <img
               class="hotprice-gif"
-              width="70px"
+              width="70"
               src="./images/fire.gif"
               alt="Hotprice gif animation"
             />
@@ -1345,8 +1343,7 @@
             </p>
 
             <p class="services-cards__info">
-              Root access<span class="services-cards__value">SSH, Panel</span> <
-              /p>
+              Root access<span class="services-cards__value">SSH, Panel</span>
             </p>
 
             <p class="services-cards__info">
@@ -1396,7 +1393,7 @@
           <li class="bonuses__item">
             <span class="bonuses__checkmark">&#10004;</span>
             <h3 class="section-subtitle services-dedicated__title">
-              Unmetered Traffic if average usage < 200 Mbps
+              Unmetered Traffic if average usage &lt; 200 Mbps
             </h3>
           </li>
 
@@ -1731,19 +1728,16 @@
     <!-- Faq  -->
 
     <section class="faq">
-      <div class="faq__background dedicated-faq__background"></div>
+      <div class="faq__background"></div>
       <div class="section vsys-container">
         <h2 class="section-title section-title--gradient">faq</h2>
 
         <div class="accordion">
           <div class="accordion__item">
-            <button class="accordion__btn" type="button">
-              <h3 class="section-subtitle accordion__title">
-                PRIVACY DRIVEN
-                <span
-                  class="menu-arrow menu-arrow--big menu-arrow--right"
-                ></span>
-              </h3>
+            <button class="accordion__btn section-subtitle" type="button">
+              PRIVACY DRIVEN
+              <span class="menu-arrow menu-arrow--big menu-arrow--right"></span>
+
               <!-- <svg class="accordion__arrow" width="40px" height="40px">
                   <use
                     class="accordion__svg"
@@ -1760,13 +1754,10 @@
           </div>
 
           <div class="accordion__item">
-            <button class="accordion__btn" type="button">
-              <h3 class="section-subtitle accordion__title">
-                PRIVACY DRIVEN
-                <span
-                  class="menu-arrow menu-arrow--big menu-arrow--right"
-                ></span>
-              </h3>
+            <button class="accordion__btn section-subtitle" type="button">
+              PRIVACY DRIVEN
+              <span class="menu-arrow menu-arrow--big menu-arrow--right"></span>
+
               <!-- <svg class="accordion__arrow" width="40px" height="40px">
                   <use
                     class="accordion__svg"
@@ -1783,13 +1774,10 @@
           </div>
 
           <div class="accordion__item">
-            <button class="accordion__btn" type="button">
-              <h3 class="section-subtitle accordion__title">
-                PRIVACY DRIVEN
-                <span
-                  class="menu-arrow menu-arrow--big menu-arrow--right"
-                ></span>
-              </h3>
+            <button class="accordion__btn section-subtitle" type="button">
+              PRIVACY DRIVEN
+              <span class="menu-arrow menu-arrow--big menu-arrow--right"></span>
+
               <!-- <svg class="accordion__arrow" width="40px" height="40px">
                   <use
                     class="accordion__svg"
@@ -1806,13 +1794,10 @@
           </div>
 
           <div class="accordion__item">
-            <button class="accordion__btn" type="button">
-              <h3 class="section-subtitle accordion__title">
-                PRIVACY DRIVEN
-                <span
-                  class="menu-arrow menu-arrow--big menu-arrow--right"
-                ></span>
-              </h3>
+            <button class="accordion__btn section-subtitle" type="button">
+              PRIVACY DRIVEN
+              <span class="menu-arrow menu-arrow--big menu-arrow--right"></span>
+
               <!-- <svg class="accordion__arrow" width="40px" height="40px">
                   <use
                     class="accordion__svg"
@@ -1829,13 +1814,10 @@
           </div>
 
           <div class="accordion__item">
-            <button class="accordion__btn" type="button">
-              <h3 class="section-subtitle accordion__title">
-                PRIVACY DRIVEN
-                <span
-                  class="menu-arrow menu-arrow--big menu-arrow--right"
-                ></span>
-              </h3>
+            <button class="accordion__btn section-subtitle" type="button">
+              PRIVACY DRIVEN
+              <span class="menu-arrow menu-arrow--big menu-arrow--right"></span>
+
               <!-- <svg class="accordion__arrow" width="40px" height="40px">
                   <use
                     class="accordion__svg"
@@ -1852,13 +1834,10 @@
           </div>
 
           <div class="accordion__item">
-            <button class="accordion__btn" type="button">
-              <h3 class="section-subtitle accordion__title">
-                PRIVACY DRIVEN
-                <span
-                  class="menu-arrow menu-arrow--big menu-arrow--right"
-                ></span>
-              </h3>
+            <button class="accordion__btn section-subtitle" type="button">
+              PRIVACY DRIVEN
+              <span class="menu-arrow menu-arrow--big menu-arrow--right"></span>
+
               <!-- <svg class="accordion__arrow" width="40px" height="40px">
                   <use
                     class="accordion__svg"
@@ -1897,8 +1876,7 @@
               <ul>
                 <li class="footer-contact__item">
                   <a class="footer-contact__link" href="#"
-                    >Dehtyarivska street 4-A, office <br />
-                    505, Kyiv 04050, Ukraine</a
+                    >Dehtyarivska street 4-A, office 505, Kyiv 04050, Ukraine</a
                   >
                 </li>
                 <li class="footer-contact__item">
@@ -1992,39 +1970,44 @@
             </li>
           </ul>
 
-          <ul class="footer-payment__list">
-            <h3 class="section-subtitle footer__subtitle">Payment system</h3>
-            <li class="footer-payment__item">
-              <svg class="footer-payment__img">
-                <use href="./images/sprite.svg#payment-bitcoin"></use>
-              </svg>
-            </li>
-            <li class="footer-payment__item">
-              <svg class="footer-payment__img">
-                <use href="./images/sprite.svg#payment-paypal"></use>
-              </svg>
-            </li>
-            <li class="footer-payment__item">
-              <svg class="footer-payment__img">
-                <use href="./images/sprite.svg#payment-bank-transfer"></use>
-              </svg>
-            </li>
-            <li class="footer-payment__item">
-              <svg class="footer-payment__img">
-                <use href="./images/sprite.svg#payment-webmoney"></use>
-              </svg>
-            </li>
-            <li class="footer-payment__item">
-              <svg class="footer-payment__img">
-                <use href="./images/sprite.svg#payment-visa"></use>
-              </svg>
-            </li>
-            <li class="footer-payment__item">
-              <svg class="footer-payment__img">
-                <use href="./images/sprite.svg#payment-mastercard"></use>
-              </svg>
-            </li>
-          </ul>
+          <div class="footer-payment__content">
+            <h3 class="section-subtitle footer__subtitle">
+              Payment <br />
+              system
+            </h3>
+            <ul class="footer-payment__list">
+              <li class="footer-payment__item">
+                <svg class="footer-payment__img">
+                  <use href="./images/sprite.svg#payment-bitcoin"></use>
+                </svg>
+              </li>
+              <li class="footer-payment__item">
+                <svg class="footer-payment__img">
+                  <use href="./images/sprite.svg#payment-paypal"></use>
+                </svg>
+              </li>
+              <li class="footer-payment__item">
+                <svg class="footer-payment__img">
+                  <use href="./images/sprite.svg#payment-bank-transfer"></use>
+                </svg>
+              </li>
+              <li class="footer-payment__item">
+                <svg class="footer-payment__img">
+                  <use href="./images/sprite.svg#payment-webmoney"></use>
+                </svg>
+              </li>
+              <li class="footer-payment__item">
+                <svg class="footer-payment__img">
+                  <use href="./images/sprite.svg#payment-visa"></use>
+                </svg>
+              </li>
+              <li class="footer-payment__item">
+                <svg class="footer-payment__img">
+                  <use href="./images/sprite.svg#payment-mastercard"></use>
+                </svg>
+              </li>
+            </ul>
+          </div>
         </div>
       </div>
     </footer>
