--- a/random-sections.html
+++ b/random-sections.html
@@ -55,39 +55,37 @@
             <ul class="price-billing__buttons price-billing__buttons--gap">
               <li class="price-billing__item">
                 <button
-                  class="price-billing__button price-billing__button--blue"
+                  class="section-subtitle section-subtitle--blue price-billing__button"
                 >
-                  <h4 class="section-subtitle section-subtitle--blue">
-                    1 MONTH
-                  </h4>
-                  <p>Default</p>
+                  1 MONTH
+                  <span class="price-billing__label">Default</span>
                 </button>
               </li>
 
               <li class="price-billing__item">
-                <button class="price-billing__button">
-                  <h4 class="section-subtitle section-subtitle--blue">
-                    1 MONTH
-                  </h4>
-                  <p>Default</p>
+                <button
+                  class="section-subtitle section-subtitle--blue price-billing__button"
+                >
+                  1 MONTH
+                  <span class="price-billing__label">Default</span>
                 </button>
               </li>
 
               <li class="price-billing__item">
-                <button class="price-billing__button">
-                  <h4 class="section-subtitle section-subtitle--blue">
-                    1 MONTH
-                  </h4>
-                  <p>Default</p>
+                <button
+                  class="section-subtitle section-subtitle--blue price-billing__button"
+                >
+                  1 MONTH
+                  <span class="price-billing__label">Default</span>
                 </button>
               </li>
 
               <li class="price-billing__item">
-                <button class="price-billing__button">
-                  <h4 class="section-subtitle section-subtitle--blue">
-                    1 MONTH
-                  </h4>
-                  <p>Default</p>
+                <button
+                  class="section-subtitle section-subtitle--blue price-billing__button"
+                >
+                  1 MONTH
+                  <span class="price-billing__label">Default</span>
                 </button>
               </li>
             </ul>
@@ -97,29 +95,29 @@
             <h3 class="section-subtitle">DC LOCATION:</h3>
             <ul class="price-billing__buttons price-billing__buttons--gap">
               <li class="price-billing__item">
-                <button class="price-billing__button">
-                  <h4 class="section-subtitle section-subtitle--blue">
-                    1 MONTH
-                  </h4>
-                  <p>Default</p>
+                <button
+                  class="section-subtitle section-subtitle--blue price-billing__button"
+                >
+                  1 MONTH
+                  <span class="price-billing__label">Default</span>
                 </button>
               </li>
 
               <li class="price-billing__item">
-                <button class="price-billing__button">
-                  <h4 class="section-subtitle section-subtitle--blue">
-                    1 MONTH
-                  </h4>
-                  <p>Default</p>
+                <button
+                  class="section-subtitle section-subtitle--blue price-billing__button"
+                >
+                  1 MONTH
+                  <span class="price-billing__label">Default</span>
                 </button>
               </li>
 
               <li class="price-billing__item">
-                <button class="price-billing__button">
-                  <h4 class="section-subtitle section-subtitle--blue">
-                    1 MONTH
-                  </h4>
-                  <p>Default</p>
+                <button
+                  class="section-subtitle section-subtitle--blue price-billing__button"
+                >
+                  1 MONTH
+                  <span class="price-billing__label">Default</span>
                 </button>
               </li>
             </ul>
@@ -483,7 +481,7 @@
           <li class="price-dedicated__card">
             <img
               class="price-dedicated__gif"
-              width="50px"
+              width="50"
               src="./images/fire.gif"
               alt="Hotprice gif animation"
             />
@@ -667,7 +665,7 @@
             </p>
 
             <img
-              width="300px"
+              width="300"
               class="nvme-ssd__image"
               src="./images/nvme-ssd_illustration.svg"
               alt="nvme-ssd__illustration"
@@ -685,7 +683,7 @@
             <li class="bonuses__item">
               <span class="bonuses__checkmark">&#10004;</span>
               <h3 class="section-subtitle services-dedicated__title">
-                Unmetered Traffic if average usage < 200 Mbps
+                Unmetered Traffic if average usage &lt; 200 Mbps
               </h3>
             </li>
 
@@ -728,39 +726,37 @@
             <ul class="price-billing__buttons price-billing__buttons--gap">
               <li class="price-billing__item">
                 <button
-                  class="price-billing__button price-billing__button--blue"
+                  class="section-subtitle section-subtitle--blue price-billing__button"
                 >
-                  <h4 class="section-subtitle section-subtitle--blue">
-                    1 MONTH
-                  </h4>
-                  <p>Default</p>
+                  1 MONTH
+                  <span class="price-billing__label">Default</span>
                 </button>
               </li>
 
               <li class="price-billing__item">
-                <button class="price-billing__button">
-                  <h4 class="section-subtitle section-subtitle--blue">
-                    1 MONTH
-                  </h4>
-                  <p>Default</p>
+                <button
+                  class="section-subtitle section-subtitle--blue price-billing__button"
+                >
+                  1 MONTH
+                  <span class="price-billing__label">Default</span>
                 </button>
               </li>
 
               <li class="price-billing__item">
-                <button class="price-billing__button">
-                  <h4 class="section-subtitle section-subtitle--blue">
-                    1 MONTH
-                  </h4>
-                  <p>Default</p>
+                <button
+                  class="section-subtitle section-subtitle--blue price-billing__button"
+                >
+                  1 MONTH
+                  <span class="price-billing__label">Default</span>
                 </button>
               </li>
 
               <li class="price-billing__item">
-                <button class="price-billing__button">
-                  <h4 class="section-subtitle section-subtitle--blue">
-                    1 MONTH
-                  </h4>
-                  <p>Default</p>
+                <button
+                  class="section-subtitle section-subtitle--blue price-billing__button"
+                >
+                  1 MONTH
+                  <span class="price-billing__label">Default</span>
                 </button>
               </li>
             </ul>
@@ -770,29 +766,29 @@
             <h3 class="section-subtitle">DC LOCATION:</h3>
             <ul class="price-billing__buttons price-billing__buttons--gap">
               <li class="price-billing__item">
-                <button class="price-billing__button">
-                  <h4 class="section-subtitle section-subtitle--blue">
-                    1 MONTH
-                  </h4>
-                  <p>Default</p>
+                <button
+                  class="section-subtitle section-subtitle--blue price-billing__button"
+                >
+                  1 MONTH
+                  <span class="price-billing__label">Default</span>
                 </button>
               </li>
 
               <li class="price-billing__item">
-                <button class="price-billing__button">
-                  <h4 class="section-subtitle section-subtitle--blue">
-                    1 MONTH
-                  </h4>
-                  <p>Default</p>
+                <button
+                  class="section-subtitle section-subtitle--blue price-billing__button"
+                >
+                  1 MONTH
+                  <span class="price-billing__label">Default</span>
                 </button>
               </li>
 
               <li class="price-billing__item">
-                <button class="price-billing__button">
-                  <h4 class="section-subtitle section-subtitle--blue">
-                    1 MONTH
-                  </h4>
-                  <p>Default</p>
+                <button
+                  class="section-subtitle section-subtitle--blue price-billing__button"
+                >
+                  1 MONTH
+                  <span class="price-billing__label">Default</span>
                 </button>
               </li>
             </ul>
@@ -885,7 +881,7 @@
           <li class="services-cards__item services-cards__item--blue">
             <img
               class="hotprice-gif"
-              width="70px"
+              width="70"
               src="./images/fire.gif"
               alt="Hotprice gif animation"
             />
