--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css
               </li>
 
               <li class="navbar__item">
-                <button class="dropdown__button" href="#">
+                <button class="dropdown__button">
                   Cloud<span class="menu-arrow"></span>
                 </button>
                 <ul class="dropdown__menu">
@@ -304,7 +304,7 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css
               </li>
 
               <li class="navbar__item">
-                <button class="dropdown__button" href="#">
+                <button class="dropdown__button">
                   Services<span class="menu-arrow"></span>
                 </button>
                 <ul class="dropdown__menu">
@@ -344,7 +344,7 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css
               </li>
 
               <li class="navbar__item">
-                <button class="dropdown__button" href="#">
+                <button class="dropdown__button">
                   Solutions<span class="menu-arrow"></span>
                 </button>
                 <ul class="dropdown__menu">
@@ -384,7 +384,7 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css
               </li>
 
               <li class="navbar__item">
-                <button class="dropdown__button" href="#">
+                <button class="dropdown__button">
                   Company<span class="menu-arrow"></span>
                 </button>
                 <ul class="dropdown__menu">
@@ -424,7 +424,7 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css
               </li>
 
               <li class="navbar__item">
-                <button class="dropdown__button" href="#">
+                <button class="dropdown__button">
                   Recources<span class="menu-arrow"></span>
                 </button>
                 <ul class="dropdown__menu">
@@ -462,37 +462,37 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css
                   </li>
                 </ul>
               </li>
-
-              <div class="mobile-menu__buttons">
-                <button class="button button--transparent button--sm">
-                  LOGIN
-                </button>
-
-                <div class="navbar__item navbar__item--width">
-                  <a class="dropdown__button button--lang">
-                    <svg class="planet-icon" width="40" height="40">
-                      <use href="./images/sprite.svg#planet-icon"></use>
-                    </svg>
-                    English <span class="menu-arrow"></span>
-                  </a>
-                  <ul
-                    class="dropdown__menu dropdown__menu--lang dropdown__menu--white"
-                  >
-                    <li>
-                      <a class="dropdown__link dropdown__link--black" href="#"
-                        >UA</a
-                      >
-                    </li>
-                    <li>
-                      <a class="dropdown__link dropdown__link--black" href="#"
-                        >Русский</a
-                      >
-                    </li>
-                    <li></li>
-                  </ul>
-                </div>
-              </div>
             </ul>
+
+            <div class="mobile-menu__buttons">
+              <button class="button button--transparent button--sm">
+                LOGIN
+              </button>
+
+              <div class="navbar__item navbar__item--width">
+                <a class="dropdown__button button--lang">
+                  <svg class="planet-icon" width="40" height="40">
+                    <use href="./images/sprite.svg#planet-icon"></use>
+                  </svg>
+                  English <span class="menu-arrow"></span>
+                </a>
+                <ul
+                  class="dropdown__menu dropdown__menu--lang dropdown__menu--white"
+                >
+                  <li>
+                    <a class="dropdown__link dropdown__link--black" href="#"
+                      >UA</a
+                    >
+                  </li>
+                  <li>
+                    <a class="dropdown__link dropdown__link--black" href="#"
+                      >Русский</a
+                    >
+                  </li>
+                  <li></li>
+                </ul>
+              </div>
+            </div>
           </div>
         </div>
       </div>
@@ -540,7 +540,7 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css
 
                     <div class="hero__image">
                       <img
-                        width="222px"
+                        width="222"
                         class="hero__svg"
                         src="./images/balancing-blue.svg"
                         alt="Server illustration"
@@ -584,7 +584,7 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css
 
                     <div class="hero__image">
                       <img
-                        width="222px"
+                        width="222"
                         class="hero__svg"
                         src="./images/balancing-blue.svg"
                         alt="Server illustration"
@@ -631,7 +631,7 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css
 
                     <div class="hero__image">
                       <img
-                        width="222px"
+                        width="222"
                         class="hero__svg"
                         src="./images/balancing-blue.svg"
                         alt="Server illustration"
@@ -975,7 +975,7 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css
               <li class="services-cards__item services-cards__item--blue">
                 <img
                   class="hotprice-gif"
-                  width="70px"
+                  width="70"
                   src="./images/fire.gif"
                   alt="Hotprice gif animation"
                 />
@@ -2007,13 +2007,10 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css
 
         <div class="accordion">
           <div class="accordion__item">
-            <button class="accordion__btn" type="button">
-              <h3 class="section-subtitle accordion__title">
-                PRIVACY DRIVEN
-                <span
-                  class="menu-arrow menu-arrow--big menu-arrow--right"
-                ></span>
-              </h3>
+            <button class="accordion__btn section-subtitle" type="button">
+              PRIVACY DRIVEN
+              <span class="menu-arrow menu-arrow--big menu-arrow--right"></span>
+
               <!-- <svg class="accordion__arrow" width="40px" height="40px">
                   <use
                     class="accordion__svg"
@@ -2030,13 +2027,10 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css
           </div>
 
           <div class="accordion__item">
-            <button class="accordion__btn" type="button">
-              <h3 class="section-subtitle accordion__title">
-                PRIVACY DRIVEN
-                <span
-                  class="menu-arrow menu-arrow--big menu-arrow--right"
-                ></span>
-              </h3>
+            <button class="accordion__btn section-subtitle" type="button">
+              PRIVACY DRIVEN
+              <span class="menu-arrow menu-arrow--big menu-arrow--right"></span>
+
               <!-- <svg class="accordion__arrow" width="40px" height="40px">
                   <use
                     class="accordion__svg"
@@ -2053,13 +2047,10 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css
           </div>
 
           <div class="accordion__item">
-            <button class="accordion__btn" type="button">
-              <h3 class="section-subtitle accordion__title">
-                PRIVACY DRIVEN
-                <span
-                  class="menu-arrow menu-arrow--big menu-arrow--right"
-                ></span>
-              </h3>
+            <button class="accordion__btn section-subtitle" type="button">
+              PRIVACY DRIVEN
+              <span class="menu-arrow menu-arrow--big menu-arrow--right"></span>
+
               <!-- <svg class="accordion__arrow" width="40px" height="40px">
                   <use
                     class="accordion__svg"
@@ -2076,13 +2067,10 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css
           </div>
 
           <div class="accordion__item">
-            <button class="accordion__btn" type="button">
-              <h3 class="section-subtitle accordion__title">
-                PRIVACY DRIVEN
-                <span
-                  class="menu-arrow menu-arrow--big menu-arrow--right"
-                ></span>
-              </h3>
+            <button class="accordion__btn section-subtitle" type="button">
+              PRIVACY DRIVEN
+              <span class="menu-arrow menu-arrow--big menu-arrow--right"></span>
+
               <!-- <svg class="accordion__arrow" width="40px" height="40px">
                   <use
                     class="accordion__svg"
@@ -2099,13 +2087,10 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css
           </div>
 
           <div class="accordion__item">
-            <button class="accordion__btn" type="button">
-              <h3 class="section-subtitle accordion__title">
-                PRIVACY DRIVEN
-                <span
-                  class="menu-arrow menu-arrow--big menu-arrow--right"
-                ></span>
-              </h3>
+            <button class="accordion__btn section-subtitle" type="button">
+              PRIVACY DRIVEN
+              <span class="menu-arrow menu-arrow--big menu-arrow--right"></span>
+
               <!-- <svg class="accordion__arrow" width="40px" height="40px">
                   <use
                     class="accordion__svg"
@@ -2122,13 +2107,10 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css
           </div>
 
           <div class="accordion__item">
-            <button class="accordion__btn" type="button">
-              <h3 class="section-subtitle accordion__title">
-                PRIVACY DRIVEN
-                <span
-                  class="menu-arrow menu-arrow--big menu-arrow--right"
-                ></span>
-              </h3>
+            <button class="accordion__btn section-subtitle" type="button">
+              PRIVACY DRIVEN
+              <span class="menu-arrow menu-arrow--big menu-arrow--right"></span>
+
               <!-- <svg class="accordion__arrow" width="40px" height="40px">
                   <use
                     class="accordion__svg"
@@ -2170,8 +2152,7 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css
               <ul>
                 <li class="footer-contact__item">
                   <a class="footer-contact__link" href="#"
-                    >Dehtyarivska street 4-A, office <br />
-                    505, Kyiv 04050, Ukraine</a
+                    >Dehtyarivska street 4-A, office 505, Kyiv 04050, Ukraine</a
                   >
                 </li>
                 <li class="footer-contact__item">
@@ -2265,39 +2246,44 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css
             </li>
           </ul>
 
-          <ul class="footer-payment__list">
-            <h3 class="section-subtitle footer__subtitle">Payment system</h3>
-            <li class="footer-payment__item">
-              <svg class="footer-payment__img">
-                <use href="./images/sprite.svg#payment-bitcoin"></use>
-              </svg>
-            </li>
-            <li class="footer-payment__item">
-              <svg class="footer-payment__img">
-                <use href="./images/sprite.svg#payment-paypal"></use>
-              </svg>
-            </li>
-            <li class="footer-payment__item">
-              <svg class="footer-payment__img">
-                <use href="./images/sprite.svg#payment-bank-transfer"></use>
-              </svg>
-            </li>
-            <li class="footer-payment__item">
-              <svg class="footer-payment__img">
-                <use href="./images/sprite.svg#payment-webmoney"></use>
-              </svg>
-            </li>
-            <li class="footer-payment__item">
-              <svg class="footer-payment__img">
-                <use href="./images/sprite.svg#payment-visa"></use>
-              </svg>
-            </li>
-            <li class="footer-payment__item">
-              <svg class="footer-payment__img">
-                <use href="./images/sprite.svg#payment-mastercard"></use>
-              </svg>
-            </li>
-          </ul>
+          <div class="footer-payment__content">
+            <h3 class="section-subtitle footer__subtitle">
+              Payment <br />
+              system
+            </h3>
+            <ul class="footer-payment__list">
+              <li class="footer-payment__item">
+                <svg class="footer-payment__img">
+                  <use href="./images/sprite.svg#payment-bitcoin"></use>
+                </svg>
+              </li>
+              <li class="footer-payment__item">
+                <svg class="footer-payment__img">
+                  <use href="./images/sprite.svg#payment-paypal"></use>
+                </svg>
+              </li>
+              <li class="footer-payment__item">
+                <svg class="footer-payment__img">
+                  <use href="./images/sprite.svg#payment-bank-transfer"></use>
+                </svg>
+              </li>
+              <li class="footer-payment__item">
+                <svg class="footer-payment__img">
+                  <use href="./images/sprite.svg#payment-webmoney"></use>
+                </svg>
+              </li>
+              <li class="footer-payment__item">
+                <svg class="footer-payment__img">
+                  <use href="./images/sprite.svg#payment-visa"></use>
+                </svg>
+              </li>
+              <li class="footer-payment__item">
+                <svg class="footer-payment__img">
+                  <use href="./images/sprite.svg#payment-mastercard"></use>
+                </svg>
+              </li>
+            </ul>
+          </div>
         </div>
       </div>
     </footer>
